# job-radar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  job-radar.example.yaml  pyproject.toml  watchlist.example.json
.github/workflows/: ci.yml  codeql.yml  release.yml
job_radar/: __init__.py  cli.py  config.py  dedup.py  discover.py  engine.py  funnel.py  llm.py  scoring.py  seed.py  shortlist.py  sources.py  store.py  util.py
job_radar/data/: job-radar.example.yaml  watchlist.example.json
prompts/: build-config-with-ai.md
tests/: test_core.py  test_discovery.py
