[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "job-radar"
dynamic = ["version"]
description = "Harvest the whole open job market for roles that fit you — direct from company ATS feeds and aggregator APIs — scored, deduped, with optional LLM semantic ranking."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Justin Hawkes" }]
keywords = ["job-search", "ats", "llm", "cli", "greenhouse", "lever"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = [
  "pyyaml>=6.0",
  "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# The optional LLM re-rank uses stdlib HTTP — it needs no extra packages.
dev = ["pytest>=7.0"]

[project.scripts]
job-radar = "job_radar.cli:main"

[project.urls]
Homepage = "https://github.com/hawkesj12/job-radar"
Repository = "https://github.com/hawkesj12/job-radar"
Issues = "https://github.com/hawkesj12/job-radar/issues"
Changelog = "https://github.com/hawkesj12/job-radar/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["job_radar"]

[tool.setuptools.dynamic]
version = { attr = "job_radar.__version__" }

[tool.setuptools.package-data]
job_radar = ["data/*.yaml", "data/*.json"]
